hello-world-pod-with-labels.yml
apiVersion: v1  
kind: Pod
metadata:
  name: nginx-pod-with-labels
  labels:
    name: soltan 
    key: D  
spec:
  containers:
  - name: nginx
    image: nginx:1.21.4
    ports:
    - containerPort: 80
