hello-world-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod4
spec:
  containers:
  - name: nginx
    image: nginx:1.21.4
    ports:
    - containerPort: 80
