multi-container-design-pattern.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-design-pattern
spec:
  restartPolicy: Never
  volumes:
    - name: shared-area
      emptyDir: {}
  containers:
    - name: nginx-container
      image: nginx
      volumeMounts:
        - name: shared-area
          mountPath: /usr/share/nginx/html
    - name: sidecar-container
      image: ubuntu
      volumeMounts:
        - name: shared-area
          mountPath: /pod-area
      command: ['/bin/bash']
      args: ['-c', 'echo "Hello from the sidecar container!" > /pod-area/index.html && sleep 3600']
