recreate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recreat-deployment
spec:
  replicas: 8 
  selector:
    matchLabels:
      app: helloserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: helloserver
    spec:
      containers:
        - name: helloserver
          image: mohamedosama495/k8s-web-server:latest
          ports:
            - containerPort: 3000
