service-nodeport.yaml
apiVersion : v1
kind: Service
metadata:
  name: recreat-service  
spec:
  type: NodePort
  selector:
    app: helloserver
  ports:
    - port: 80  
      targetPort: 3000
